# mdbook-files

./: Cargo.toml  README.md  deny.toml  flake.nix  style.css
.github/workflows/: release.yml
book/src/: SUMMARY.md  subchapter.md
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  reference.md  setup.md  source.md  subchapter.md  tests.md
docs/src/getting-started/: install.md  setup.md  usage.md
docs/src/reference/: files.md  plugin.md
docs/src/tests/: book.md  plugin.md
example/: book.toml
example/src/: SUMMARY.md  source.md  subchapter.md
src/: lib.rs  main.rs  options.rs  script.js.tera
