[package]
name = "mdbook-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.8", features = ["derive"] }
mdbook = "0.4.35"
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.5.11"
