[package]
name = "mdbook-files"
version = "0.2.0"
edition = "2021"
authors = ["Patrick Elsen <pelsen@xfbs.net>"]
license = "MIT"
description = "Preprocessor for mdbook which renders files from a directory as an interactive widget"
repository = "https://github.com/xfbs/mdbook-files"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
camino = { version = "1.1.6", features = ["serde", "serde1"] }
clap = { version = "4.4.8", features = ["derive"] }
env_logger = "0.10.1"
ignore = "0.4.21"
log = "0.4.20"
mdbook = { version = "0.4.51", default-features = false }
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tera = { version = "1.19.1", default-features = false, features = ["builtins"] }
toml = "0.5.11"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
